--- a/apps/timeline_updater_admin_app/pubspec.yaml
+++ b/apps/timeline_updater_admin_app/pubspec.yaml
@@ -15,6 +15,12 @@ dependencies:
   timeline_updater_app_utils:
     path: ./../../packages/timeline_updater_app_utils
 
+  # environment variables
+  flutter_dotenv: ^5.2.1
+
+  # Supabase
+  supabase_flutter: ^2.8.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -22,3 +28,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - .env
