--- a/apps/timeline_updater_app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/apps/timeline_updater_app/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = timeline_updater_app
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = dev.coderave.dev.timelineUpdaterApp
+PRODUCT_BUNDLE_IDENTIFIER = dev.coderave.timelineUpdaterApp
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 dev.coderave.dev. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 dev.coderave. All rights reserved.
