--- a/apps/timeline_updater_app/pubspec.yaml
+++ b/apps/timeline_updater_app/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   # Supabase
   supabase_flutter: ^2.8.1
 
+  # Firebase
+  firebase_core: ^3.8.1
+  firebase_messaging: ^15.1.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
