--- a/apps/timeline_updater_customer_app/windows/runner/Runner.rc
+++ b/apps/timeline_updater_customer_app/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "dev.coderave.dev" "\0"
+            VALUE "CompanyName", "dev.coderave" "\0"
             VALUE "FileDescription", "timeline_updater_customer_app" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "timeline_updater_customer_app" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 dev.coderave.dev. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 dev.coderave. All rights reserved." "\0"
             VALUE "OriginalFilename", "timeline_updater_customer_app.exe" "\0"
             VALUE "ProductName", "timeline_updater_customer_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
