--- a/apps/timeline_updater_admin_app/pubspec.yaml
+++ b/apps/timeline_updater_admin_app/pubspec.yaml
@@ -33,6 +33,9 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
 
+  # Generators
+  build_runner: ^2.4.12
+
 flutter:
   uses-material-design: true
 
