--- a/.github/workflows/firebase-hosting-customer.yml
+++ b/.github/workflows/firebase-hosting-customer.yml
@@ -21,7 +21,6 @@ jobs:
     env:
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
-      FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_TIMELINE_UPDATER_CUSTOMER_APP }}
 
     steps:
 
@@ -62,7 +61,7 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: $FIREBASE_SERVICE_ACCOUNT
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_TIMELINE_UPDATER_CUSTOMER_APP }}
           channelId: live
           projectId: timeline-updater-customer-app
           entryPoint: ./apps/timeline_updater_customer_app
