--- a/apps/timeline_updater_customer_app/analysis_options.yaml
+++ b/apps/timeline_updater_customer_app/analysis_options.yaml
@@ -6,3 +6,11 @@ linter:
     avoid_print: true
     slash_for_doc_comments: true
     public_member_api_docs: true
+
+analyzer:
+  plugins:
+    - custom_lint
+
+custom_lint:
+  rules:
+    provider_parameters: true
