--- a/apps/timeline_updater_customer_app/pubspec.yaml
+++ b/apps/timeline_updater_customer_app/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   # Routing
   go_router: ^14.2.7
 
+  # UI
+  lucide_icons_flutter: ^1.2.5
+  gap: ^3.0.1
+
   # Platform specifics
   bitsdojo_window: ^0.1.6
 
